--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h3> harrastukset </h3>
          <a href="https://fi.wikipedia.org/wiki/Lenkkeily" target="_blank"> <p>kävely lenkkeily </p></a>
           <p> pelaaminen </p>
-          <img src="./images/gaming.png" width="150" height="150">
+          <img src="gaming.png" width="150" height="150">
           <h3> työkokemus </h3>
           <p> kesätyössä kirpputorilla </p>
           <p> työssä opiskelu varkauden ammattiopistolla </p> 
