--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           <p> työssä opiskelu varkauden ammattiopistolla </p> 
           <h3> kouluprojekti </h3>
           <a href="https://esedu-my.sharepoint.com/:p:/r/personal/jusa_itkonen_esedulainen_fi/Documents/TVP/TVP3/oppimisteht%C3%A4v%C3%A4t/%23647%20tietoturvan%20perusteet/%23647%20Tietoturvan%20perusteet.pptx?d=we82c6724af5048d688c0d33311f74f8a&csf=1&web=1&e=RTB5j3" target="blank"><p> linkki projektiin </p> </a>
+          <h3> linkki GitHubiini </h3>
+          <a href="https://github.com/JusaTiVi/TiVi-594-teht-v-" target="_blank"> GitHub </a>
         </page>
    </body>
 
